# lspee

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  codecov.yml  deny.toml  devenv.nix  devenv.yaml  lspee.toml  monochange.toml  package.json  pnpm-workspace.yaml  rust-toolchain.toml
.changeset/: 001-runtime-defaults-and-bootstrap.md  002-daemon-lifecycle-controls.md  003-test-coverage-updates.md  004-docs-and-release-hardening.md  005-reserve-lspee-crate-name.md  006-editor-proxy-and-helix-sharing.md  007-memory-budgets-and-eviction.md
.github/actions/setup-mc/: action.yml
.github/workflows/: changeset-policy.yml  ci.yml  coverage.yml  docs.yml  npm-publish.yml  publish.yml  release.yml
config/: languages.toml
crates/lspee/: Cargo.toml  README.md
crates/lspee/src/: lib.rs
crates/lspee_cli/: Cargo.toml  README.md
crates/lspee_cli/src/: lib.rs  main.rs
crates/lspee_cli/src/commands/: call.rs  capabilities.rs  client.rs  config.rs  do_cmd.rs  doctor.rs  lsp.rs  lsps.rs  mcp.rs  mod.rs  proxy.rs  restart.rs  serve.rs  serve_mcp.rs  status.rs  stop.rs
crates/lspee_cli/tests/: cli_integration.rs  snapshot_tests.rs
crates/lspee_cli/tests/snapshots/: snapshot_tests__resolved_config.snap
crates/lspee_config/: Cargo.toml  README.md
crates/lspee_config/defaults/: languages.toml
crates/lspee_config/src/: languages.rs  lib.rs
crates/lspee_daemon/: Cargo.toml  README.md
crates/lspee_daemon/src/: eviction.rs  lib.rs  memory.rs  protocol.rs  registry.rs  stream.rs
crates/lspee_daemon/tests/: control_ipc.rs  real_lsp.rs
crates/lspee_lsp/: Cargo.toml  README.md
crates/lspee_lsp/src/: lib.rs
crates/lspee_mcp/: Cargo.toml
crates/lspee_mcp/src/: daemon_helpers.rs  lib.rs
crates/lspee_protocol/: Cargo.toml  README.md
crates/lspee_protocol/src/: lib.rs
defaults/: languages.toml
docs/: architecture.md  book.toml  cli.md  config.md  configuration.md  languages.md
docs/specs/: daemon-protocol.md  daemon-session-lifecycle.md
docs/src/: SUMMARY.md  readme.md
docs/src/advanced/: daemon-internals.md  performance-and-reliability.md  session-reuse.md
docs/src/getting-started/: first-request.md  installation.md  quick-start.md
docs/src/guide/: agent-usage.md  configuration-and-identity.md  daemon-lifecycle.md  helix-integration.md  human-usage.md  language-catalog.md  memory-budgets.md  troubleshooting.md
docs/src/includes/: agent-cli-examples.md  catalog-path.md  config-layers.md  daemon-auto-shutdown.md  daemon-auto-start.md  daemon-event-loop.md  daemon-process-tree.md  daemon-spawn-mechanism.md  install-cargo.md  install-from-source.md  memory-config.md  platform-persistence.md  platform-support.md  session-idle-config.md  session-key-inline.md  session-key.md
docs/src/reference/: cli.md  configuration.md  platform-support.md  protocol.md  release-process.md
fixtures/multi-lsp-project/: lspee.toml
fixtures/real-rust-project/: lspee.toml
fixtures/real-rust-project/src/: lib.rs
fixtures/rust-project/: lspee.toml
npm/skill/: README.md  package.json
scripts/git-hooks/: pre-commit.sh  pre-push.sh
scripts/npm/: build-packages.mjs  prepare-skill-package.mjs  publish-packages.mjs
skills/lspee/: REFERENCE.md  SKILL.md
testing/lspee_test_helpers/: Cargo.toml
testing/lspee_test_helpers/src/: daemon.rs  fixtures.rs  lib.rs  snapshots.rs
