[package]
name = "lspee"
version.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reserved crate name for the lspee project; implementation crates are published separately."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
