[package]
name = "lspee_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "lspee_cli"
path = "src/lib.rs"

[[bin]]
name = "lspee"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lspee_daemon = { path = "../lspee_daemon" }
lspee_config = { path = "../lspee_config" }
lspee_lsp = { path = "../lspee_lsp" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true

[dev-dependencies]
lspee_daemon = { path = "../lspee_daemon" }
lspee_config = { path = "../lspee_config" }
lspee_test_helpers = { path = "../../testing/lspee_test_helpers" }
insta = { version = "1.42", features = ["json", "redactions", "filters"] }
tokio = { workspace = true, features = ["test-util"] }
serde_json.workspace = true
clap.workspace = true
