[package]
name = "lspee_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[lib]
name = "lspee_cli"
path = "src/lib.rs"

[[bin]]
name = "lspee"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
lspee_lsp = { path = "../lspee_lsp" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs", "process"] }
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
url.workspace = true

[dev-dependencies]
clap.workspace = true
insta = { workspace = true, features = ["json", "redactions", "filters"] }
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
lspee_test_helpers = { path = "../../testing/lspee_test_helpers" }
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
