[package]
name = "lspee_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[lib]
name = "lspee_cli"
path = "src/lib.rs"

[[bin]]
name = "lspee"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive", "env"] }
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
lspee_lsp = { path = "../lspee_lsp" }
lspee_mcp = { path = "../lspee_mcp" }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs", "process"] }
toml = { workspace = true, default-features = true }
toml_edit = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["json", "env-filter"] }
url = { workspace = true, default-features = true }

[dev-dependencies]
clap = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true, features = ["json", "redactions", "filters"] }
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
lspee_test_helpers = { path = "../../testing/lspee_test_helpers" }
serde_json = { workspace = true, default-features = true }
tempfile = "3"
tokio = { workspace = true, default-features = true, features = ["test-util"] }
