[package]
name = "lspee_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
sha2 = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
toml = { workspace = true, default-features = true }
url = { workspace = true, default-features = true }
