[package]
name = "lspee_daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
lspee_config = { path = "../lspee_config" }
lspee_lsp = { path = "../lspee_lsp" }
lspee_protocol = { path = "../lspee_protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs", "process"] }
tracing.workspace = true
url.workspace = true
