[package]
name = "lspee_daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
lspee_config = { path = "../lspee_config" }
lspee_lsp = { path = "../lspee_lsp" }
lspee_protocol = { path = "../lspee_protocol" }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs", "process"] }
tracing = { workspace = true, default-features = true }
url = { workspace = true, default-features = true }
