[package]
name = "lspee_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
lspee_config = { path = "../lspee_config" }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["process", "io-util", "rt", "sync"] }
tracing = { workspace = true, default-features = true }
