[package]
name = "lspee_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
tracing.workspace = true
