[package]
name = "lspee_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
lspee_config = { path = "../lspee_config" }
lspee_daemon = { path = "../lspee_daemon" }
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
