[package]
name = "lspee_test_helpers"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
insta = { version = "1.42", features = ["json", "redactions", "filters"] }
lspee_config = { path = "../../crates/lspee_config" }
lspee_daemon = { path = "../../crates/lspee_daemon" }
lspee_lsp = { path = "../../crates/lspee_lsp" }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }
tempfile = "3"
